# some_lang

./: .gitignore  LICENSE  README.md
c#net/: .gitignore  hello.cs.xxx  project.lock.json  server.cs.xxx
c#net/DataParse/: DataParse.sln
c#net/OCRparse/: OCRparse.sln
c#net/WindowsFormsApplication/: WindowsFormsApplication.sln
c#net/WindowsFormsApplication1/: WindowsFormsApplication1.sln
c#net/dome_Delegate/: Program.cs  dome_Delegate.csproj
c#net/helloApp/: helloApp.sln
c#net/net_proto/: Program.cs
c#net/split_content/: split_content.sln
c#net/study/: Program.cs
clang/net/: a.out  server.c
clang/studybase/: hello.c
clang/tmp/: changfu.c  hello.c
cpp/Hello/: Hello.sln
cpp/app/: hello.cpp
cpp/c_primer/: hello.cpp
golang/: hello.go
golang/hello/: hello
golang/net/: echo.go  server.go  start.go
java/: .gitignore
java/data_process/: build.gradle  settings.gradle
java/netty_server/: build.gradle  settings.gradle
java/netty_study/: pom.xml  readme.md
python/: 新建文本文档.txt
rust/: README.md  RENDME.MD
rust/data_structure/: Cargo.toml  README.md
rust/data_structure/example/: Utils.py  byte_proto_server.py  server.py
rust/data_structure/src/: JsonData.rs  RedisTest.rs  btree.rs  byte_process.rs  byte_process_client.rs  byte_process_py.rs  lib.rs  main.rs  mod.rs  packet.rs  process_byte.rs  ringqueue.rs  stream_data.rs  test_some.rs  tree.rs  utils.rs
rust/file_copy/: Cargo.toml  README.md
rust/file_copy/src/: lib.rs  main.rs
rust/file_copy/src/model/: fileupload.rs  mod.rs
rust/file_copy/src/sever/: httpparse.rs  mod.rs
(+313 files in other folders)
