[package]
name = "file_copy"
version = "0.1.0"
authors = ["vagrant"]


[dependencies]
bincode = {git="https://github.com/TyOverby/bincode"}
serde = "0.9"
serde_derive = "0.9"
hyper = "0.11"
futures = "*"
mysql = "*"
time = "*"

#  serde_json is just for the example, not required in general
serde_json = "0.9"